--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DiningRoomOrder</string>
+    <string name="app_name">食堂点餐系统</string>
     <string name="action_settings">Settings</string>
     <string name="host">http://kolvin.cn</string>
     <string name="login_addr">/Home/Login</string>
